--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^9.17.1",
     "framer-motion": "^7.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
